--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
       body {
         font-family: "Helvetica Neue", helvetica, arial;
         padding: 15px;
+        background-color: #008B8B;
+      }
+      h1{
+        text-align: center;
       }
 
       ul {
@@ -19,6 +23,7 @@
         width: 70%;
         margin-left: 15%;
         margin-right: 15%;
+        border-style: outset;
       }
       ul#board ul{
         display:table-row;
@@ -37,7 +42,7 @@
     </style>
   </head>
   <body>
-    <h1>Pings</h1>
+    <h1>Mine-Sweeper</h1>
     <ul id='pings'></ul>
     <ul id='board'>
     </ul>
