--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       }
       @media screen and (max-width:510px){
         body{
+          margin: 0;
           padding: 0;
         }
         ul#board{
@@ -55,6 +56,7 @@
     <ul id='pings'></ul>
     <ul id='board'>
     </ul>
+    <h1>Dedicated to Rachel :D</h1>
   </body>
   <script src="main.js"></script>
 </html>
