--- a/index.html
+++ b/index.html
@@ -34,6 +34,15 @@
         ul#board{
           margin: 0;
         }
+        ul#board ul li{
+          -webkit-touch-callout:none;
+          -webkit-user-select:none;
+          -khtml-user-select:none;
+          -moz-user-select:none;
+          -ms-user-select:none;
+          user-select:none;
+          -webkit-tap-highlight-color:rgba(0,0,0,0);
+        }
       }
       ul#board ul{
         display:table-row;
