Header design small refactor

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       font-weight:bold;
       font-family: monospace;
       padding: 7px 5px;
-      font-size: 14pt;
+      font-size: 15pt;
        margin: auto;
     }
     #bombs{
@@ -126,7 +126,7 @@
   <div id='boardhead'>
     <button id="new_game">New Game</button>
     <span id="timer"><em id="hour">0</em>:<em id="minute">00</em>:<em id="seconds">00</em></span>
-    <span id="bombs">Remaining Mines:<em id="bombcount">9<em></span>
+    <span id="bombs">Remaining Mines:<em id="bombcount">9</em></span>
   </div>
   <ul id='board'></ul>
   <footer>Dedicated to Rachel :D</footer>
