--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
   <ul id='pings'></ul>
   <div id='boardhead'>
     <button id="new_game">New Game</button>
-    <span id="timer"><em id="hour">0</em>:<em id="minute">00</em>:<em id="seconds">00</em></span>
+    <span id="timer"><em id="hours">0:</em><em id="minutes">00:</em><em id="seconds">00</em></span>
     <span id="bombs">Remaining Mines:<em id="bombcount">9</em></span>
   </div>
   <ul id='board'></ul>
