Remaining Tiles Count

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <head>
   <meta name="viewport" content="user-scalable=0, width=510px, minimum-scale=1.0"></meta>
+  <title>Mine-Sweep</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
   <style>
     body {
@@ -126,7 +127,7 @@
   <div id='boardhead'>
     <button id="new_game">New Game</button>
     <span id="timer"><em id="hours">0:</em><em id="minutes">00:</em><em id="seconds">00</em></span>
-    <span id="bombs">Remaining Mines:<em id="bombcount">9</em></span>
+    <span id="bombs">Remaining Mines:<em id="bombcount">-</em></span>
   </div>
   <ul id='board'></ul>
   <footer>Dedicated to Rachel :D</footer>
