2player timers/turns

--- a/roomselect.html
+++ b/roomselect.html
@@ -70,7 +70,7 @@
     <ul class="roomTypes">
     <li><h2>Chose a Game Type</h2></li>
     <li><a href="game.html"><div id="d_create1Player">Single Player</div></a></li>
-    <li><div id="d_create2Player">Play a Friend</div></li>
+    <li><a href='/g2p'><div id="d_create2Player">Play a Friend</div></a></li>
     </ul>
   </body>
 </html>
