--- a/game2p.html
+++ b/game2p.html
@@ -49,6 +49,11 @@
         user-select: none;
         -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
       }
+
+      div#addPlayer{
+        overflow: auto;
+        width:100%;
+      }
     }
 
     ul#board ul {
@@ -66,11 +71,10 @@
     }
 
     footer {
-      position: absolute;
-      bottom: 0px;
       width: 100%;
       background-color: gray;
       text-align:center;
+      margin-top: 10px;
     }
     #boardhead{
       /*width: 450px;*/
@@ -127,18 +131,20 @@
       /* text-align: center; */
       margin-right: auto;
       width: auto;
-      -webkit-touch-callout: none; /* iOS Safari */
-      -webkit-user-select: none;   /* Chrome/Safari/Opera */
-      -khtml-user-select: none;    /* Konqueror */
+      -webkit-touch-callout: none;
+      -webkit-user-select: none;
+      -khtml-user-select: none;
       -moz-user-select: none;
+      user-select: none;
     }
     div#addPlayer span{
       background-color: white;
       padding: 4px;
-      -webkit-touch-callout: initial; /* iOS Safari */
-      -webkit-user-select: initial;   /* Chrome/Safari/Opera */
-      -khtml-user-select: initial;    /* Konqueror */
+      -webkit-touch-callout: initial;
+      -webkit-user-select: initial;
+      -khtml-user-select: initial;
       -moz-user-select: initial;
+      user-select: initial;
     }
   </style>
 </head>
