--- a/roomselect.html
+++ b/roomselect.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Main Menu</title>
+    <meta name="viewport" content="width=440">
+
     <style>
       body {
         font-family: "Helvetica Neue", helvetica, arial;
