--- a/roomselect.html
+++ b/roomselect.html
@@ -37,6 +37,8 @@
         font-weight: bold;
         font-size: 14pt;
         border-top: 3px solid #807C7C;
+        border-left: 2px solid #969696;
+        border-right: 3px solid black;
       }
       ul li div{
         border-radius: 6px;
