--- a/game2p.html
+++ b/game2p.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-  <meta name="viewport" content="user-scalable=0, width=510px, minimum-scale=1.0"></meta>
+  <meta name="viewport" content="user-scalable=0, width=510, minimum-scale=1.0"></meta>
   <title>Mine-Sweep</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
   <style>
@@ -155,17 +155,18 @@
       text-align: center;
     }*/
     #winPopup{
+      display: none;
       position: absolute;
       top: 0px;
+      left: 0px;
       width: 100%;
       height: 100%;
       background-color: rgba(43, 43, 43, 0.64);
-      text-align: center;
     }
     #winPopup span{
       padding: 10px;
       top: 40%;
-      margin-left: auto;
+      margin-left: 40%;
       margin-right: auto;
       background-color: #fff;
       position: fixed;
@@ -176,6 +177,7 @@
     #winPopup span:hover{
       background-color: #828181;
       border-bottom: 3px solid black;
+      cursor: hand;
     }
   </style>
 </head>
@@ -183,7 +185,7 @@
 <body>
   <h1>Mine-Sweeper</h1>
   <div id='addPlayer'></div>
-  <div id="winPopup"><span>Player 1 Wins</span></div>
+  <div id="winPopup"></div>
   <div id='boardhead'>
     <button id="new_game">New Game</button>
     <span class="timer" id="timer0">Player 1: +<em id="minutes0">1:</em><em id="seconds0">00</em></span>
